# Systemy-Operacyjne-P1

./: CMakeLists.txt  main.cpp
src/: Customer.cpp  Customer.h  CustomerGenerator.cpp  CustomerGenerator.h  CustomerManager.cpp  CustomerManager.hpp  CustomersManager.cpp  CustomersManager.h  Distributor.cpp  Distributor.h  Station.cpp  Station.h  Visualiser.cpp  Visualiser.h
